--- a/staff_profile.html
+++ b/staff_profile.html
@@ -40,7 +40,7 @@
             </li>
             <li>
               <div class="details">
-                <label for="license_number">License No.: </label>
+                <label for="license_number">License No : </label>
                 <input type="text" id="license_number" readonly>
               </div>
             </li>
