--- a/user_main.html
+++ b/user_main.html
@@ -8,7 +8,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div id="clock"></div>
   <h2>Please enter the End Station points.</h2>
+  <p>Then select the bus which you want to track.. </p>
   <div class="top">
     <div class="toFromBoxes">
       <input class="endpt" type="text" id="fromInput" placeholder="From">
