double checking the push

--- a/user_main.html
+++ b/user_main.html
@@ -10,7 +10,7 @@
 <body>
   <div id="clock"></div>
   <h2>Please enter the End Station points.</h2>
-  <p>Then select the bus which you want to track.. </p>
+  <p>Then select the bus which you want to track. </p>
   <div class="top">
     <div class="toFromBoxes">
       <input class="endpt" type="text" id="fromInput" placeholder="From">
